--- a/qt6ct.conf
+++ b/qt6ct.conf
@@ -4,7 +4,7 @@ color_scheme_path=/home/eren/.config/qt6ct/style-colors.conf
 custom_palette=false
 icon_theme=kora
 standard_dialogs=xdgdesktopportal
-style=kvantum-dark
+style=kvantum
 
 [Fonts]
 fixed="Fira Sans,10,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
@@ -26,7 +26,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xf1\0\0\x3\x1f\0\0\0\0\0\0\0\0\0\0\x3\xb7\0\0\x4\x13\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xf1\0\0\x3\x1f)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\x95\0\0\x2\x80\0\0\0\0\0\0\0\0\0\0\x3\xb7\0\0\x4\x13\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\x95\0\0\x2\x80)
 
 [Troubleshooting]
 force_raster_widgets=1
